[tool.poetry]
name = "safespace"
version = "0.1.0"
description = ""
authors = ["Prince Ngattai Lam <ngattai.lam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.3"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
